chore: update config file with more team members
Signed-off-by: jbrinkman <joe.brinkman@improving.com>

--- a/valkey-glide.yaml
+++ b/valkey-glide.yaml
@@ -5,4 +5,9 @@ author:
   - "acarbonetto"
   - "jamesx-improving"
   - "jonathanl-bq"
+  - tjzhang-BQ
+  - prateek-kumar-improving
+  - cyip10
+  - yipin-chen
+  - edlng
 state: "open"
