fix: add write permissions for github-actions bot
- Add contents:write permission for tags and releases
- Add packages:write for future package publishing needs

Resolves #10

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write    # Required for creating tags and releases
+  packages: write    # Required for potential package publishing
+
 jobs:
   release:
     runs-on: ubuntu-latest
